fixed responsiveness for larger desktops

--- a/components/aside/aside.module.sass
+++ b/components/aside/aside.module.sass
@@ -2,8 +2,8 @@
 
 .aside
     height: 100vh
-    width: 250px
-    position: sticky
+    width: 10%
+    position: fixed
     left: 0
     top: 0
     transition: .35s
@@ -83,6 +83,7 @@
 @media screen and ( max-width: 1900px )
     .aside
         position: fixed
+        width: 250px
         &.open
             width: 70px
             .burger
