--- a/components/header/header.module.sass
+++ b/components/header/header.module.sass
@@ -2,12 +2,11 @@
 
 header.dashboard__header
     position: fixed
-    max-width: 1650px
     top: 0
     height: 60px
-    width: calc( 100% - 250px )
+    width: calc( 100% - 10% )
     background: white
-    margin-left: 250px
+    margin-left: 10%
     box-shadow: 0px 4px 20px 5px rgba(0, 0, 0, 0.1)
     transition: .35s
     z-index: 6
