--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -188,7 +188,7 @@ span.ripple
 .dashboard
     background: $bg
     width: 100%
-    max-width: 1900px
+    // max-width: 1900px
     margin: auto
     position: relative
 
