--- a/components/categoryFilters/category.module.sass
+++ b/components/categoryFilters/category.module.sass
@@ -63,6 +63,10 @@ form.form
 
 .card
     padding: .5rem
+    p
+        margin: 1rem 0
+        span
+            color: $primary
 
 @media screen and ( max-width: 767px )
     .category
