finish companies page UI

--- a/components/aside/aside.module.sass
+++ b/components/aside/aside.module.sass
@@ -169,6 +169,7 @@
                                 background: rgba(226, 232, 236, 0.1)
                                 text-decoration: none
                             &.active
+                                color: $secondary
                                 &::before, &::after
                                     content: ""
                                     position: absolute
