--- a/components/header/header.module.sass
+++ b/components/header/header.module.sass
@@ -4,7 +4,7 @@ header.dashboard__header
     position: fixed
     top: 0
     height: 60px
-    width: calc( 100% - 10% )
+    width: 90%
     background: white
     margin-left: 10%
     box-shadow: 0px 4px 20px 5px rgba(0, 0, 0, 0.1)
@@ -107,6 +107,7 @@ header.dashboard__header
 
 @media screen and ( max-width: 1900px )
     header.dashboard__header
+        width: calc( 100% - 250px )
         margin-left: 250px
         &.full__width
             width: calc(100% - 70px)
