--- a/components/aside/aside.module.sass
+++ b/components/aside/aside.module.sass
@@ -10,6 +10,7 @@
     z-index: 9
     .wrapper
         background: #003049
+        background: white
         height: 100%
         width: 100%
         overflow-y: auto
@@ -50,10 +51,10 @@
                     transition: .35s
                     overflow: hidden
                     font-size: 1rem
-                    color: #E2E8EC
+                    // color: #E2E8EC
                     position: relative
                     &:hover, &.active
-                        background: rgba(226, 232, 236, 0.1)
+                        background: rgba(226, 232, 200, .5)
                         text-decoration: none
                     &.active
                         color: $secondary
@@ -76,7 +77,7 @@
                     .icon
                         margin-right: 15px
                         font-size: 24px
-                        opacity: .6
+                        opacity: .9
                     span
                         transition: .2s
 
@@ -163,10 +164,10 @@
                             transition: .35s
                             overflow: hidden
                             font-size: 1rem
-                            color: #E2E8EC
+                            // color: #E2E8EC
                             position: relative
                             &:hover, &.active
-                                background: rgba(226, 232, 236, 0.1)
+                                background: rgba(226, 232, 200, .5)
                                 text-decoration: none
                             &.active
                                 color: $secondary
