--- a/components/layout/layout.module.sass
+++ b/components/layout/layout.module.sass
@@ -8,6 +8,17 @@
         overflow-y: auto
         transition: .35s
 
+.backdrop
+    position: fixed
+    top: 0
+    left: 0
+    background: rgba(0, 0, 0, .6)
+    height: 100vh
+    width: 100%
+    z-index: 8
+    overflow: hidden
+    transition: .35s
+
 @media screen and ( max-width: 1900px )
     .layout
         display: block
