update job card

--- a/components/job/job.module.sass
+++ b/components/job/job.module.sass
@@ -48,6 +48,22 @@
             width: 40%
         .company__name
             margin-bottom: 1rem
+    .btns
+        a
+            margin-right: 1rem
+        button
+            font-size: 1rem
+            cursor: pointer
+            font-weight: 700
+            &.delete
+                color: $secondary
+                border: 1px solid $secondary
+                width: 120px
+                padding: .3rem .5rem
+                text-align: center
+                &:hover
+                    background: $secondary
+                    color: white
 
 @media screen and ( max-width: 767px )
     .job__card
