--- a/components/cards/draftcard.module.sass
+++ b/components/cards/draftcard.module.sass
@@ -4,7 +4,7 @@
   display: flex
   flex-direction: row
   background: white
-  border: 1px solid #d6d6d6
+  border: none
   margin: 0 0 1.5rem 0
   padding: 2rem 1.5rem
 
