add action component and made modal responsive

--- a/components/modal/modal.module.sass
+++ b/components/modal/modal.module.sass
@@ -22,6 +22,7 @@
         background: white
         min-height: 100px
         width: 500px
+        max-width: 95%
         button.close
             position: absolute
             right: 1rem
