fixed User card UI

--- a/components/applications/application.module.sass
+++ b/components/applications/application.module.sass
@@ -67,4 +67,5 @@
         .actions
             flex-direction: row
             justify-content: space-between
+            align-items: center
             width: 100%
