--- a/components/actions/action.module.sass
+++ b/components/actions/action.module.sass
@@ -4,6 +4,7 @@
     padding: 2rem 1.5rem
     p
         margin-bottom: 1rem
+        font-size: 1rem !important
     .btns
         display: flex
         justify-content: flex-end
