--- a/components/user/user.module.sass
+++ b/components/user/user.module.sass
@@ -1,3 +1,5 @@
+@import "../../styles/_colors"
+
 .card
     margin: 1rem 0
     padding: .7rem 1rem
@@ -14,7 +16,7 @@
         overflow: hidden
         margin-right: 1rem
     .name
-        margin: .8rem 0 0
+        margin: .8rem 0
         margin-right: 1rem
         min-width: 200px
     .role
@@ -23,5 +25,8 @@
         // align-content: flex-end
         button
             cursor: pointer
+            font-size: 1rem
+            color: $secondary
+            font-weight: 700
             &:hover
                 text-decoration: underline
