made filter responsive

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -219,6 +219,8 @@ span.ripple
     min-height: calc( 100vh - 150px )
     .mobile__link
         display: none
+    .mobile-filter
+        display: none
     .app_btn
         display: flex
         flex-direction: column
@@ -253,6 +255,10 @@ span.ripple
     .content
         margin: 2rem 0
         padding: 2rem 1rem
+        .mobile-filter
+            display: block
+        .desktop-filter
+            display: none
         .mt-1
             margin-top: 2rem
         .mobile__link
