add job search filters

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -158,6 +158,8 @@ span.ripple
     input
         border: none !important
         padding: .3rem !important
+    &.filter_input
+        width: 100% !important
 
 .stars
     $percent: calc(var(--rating) / 5 * 100%)
