display criteria in jobs page

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -118,8 +118,13 @@ span.ripple
 
 .filter__criteria
     background: white
+    padding: 1rem
+    margin-bottom: 2rem
+    h2
+        margin-bottom: 1.5rem
+        font-size: clamp(1.1rem, 2vw, 1.3rem)
     .criteria
-        padding: 1rem
+        // padding: 
         margin-bottom: .7rem
         display: flex
         align-items: flex-start
