made chart responsive

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -57,6 +57,16 @@ ul
             box-shadow: none
             text-decoration: none
 
+.recharts-responsive-container
+    width: 100%
+    min-width: 700px
+    height: 300px
+
+#container
+    width: 100%
+    min-width: 700px
+    height: 300px
+
 .select-group
     display: flex
     flex-direction: column
