--- a/styles/_alerts.sass
+++ b/styles/_alerts.sass
@@ -6,16 +6,18 @@
     font-size: .9rem
     width: 100%
     z-index: 20
+    padding: 1rem
+    border-radius: 10px
     &.removable
         position: fixed
         bottom: 0
         left: 50%
         z-index: 10
         background: white
-        padding: 1rem
         width: 600px
         max-width: 100%
         border: 1px solid #E2E8EC
+        border: none
         border-top-left-radius: 10px
         border-top-right-radius: 10px
         transform: translate(-50%,-100%)
