--- a/components/templates/template.module.sass
+++ b/components/templates/template.module.sass
@@ -10,6 +10,12 @@
     right: 0
     // top: 60px
 
+@media screen and ( min-width: 1900px )
+    .main__content
+        width: 70%
+    .sub__content
+        width: 30%
+
 @media screen and ( max-width: 992px )
     .main__content
         width: calc( 100% - 230px )
