add more loaders

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -240,6 +240,9 @@ span.ripple
     span
         margin-right: .4rem
 
+.no_border
+    border: none
+
 .content
     margin: 2rem 0
     padding: 0 1.5rem
