--- a/components/category/categories.module.sass
+++ b/components/category/categories.module.sass
@@ -1,5 +1,15 @@
 @import "../../styles/_colors"
 
 .category
+    .actions
+        display: flex
+        justify-content: flex-end
+        padding-bottom: 1rem
+        button
+            margin-left: .7rem
+            cursor: pointer
+            &.btn
+                min-width: 50px
+                padding: .7rem 1rem
     article
         background: $bg
