add actions UI for mobile

--- a/components/category/categories.module.sass
+++ b/components/category/categories.module.sass
@@ -16,16 +16,17 @@
         background: $bg
         display: flex
         justify-content: space-between
-        align-items: center
+        flex-direction: column
         .sub_actions
             display: flex
             justify-content: flex-end
+            margin-top: .3rem
             button
                 margin-left: .7rem
                 cursor: pointer
                 &.btn
                     min-width: 50px
-                    padding: .7rem 1rem
+                    padding: .5rem 1rem
                     background: none
                     box-shadow: none
                     color: $secondary
