--- a/components/job-filters/search/category.module.sass
+++ b/components/job-filters/search/category.module.sass
@@ -1,7 +1,7 @@
 @import "../../../styles/_colors"
 
 .category
-    height: 40px
+    height: 50px
     min-width: 200px
     max-width: 100%
     flex-grow: 1
@@ -14,6 +14,7 @@
         font-weight: bold
         display: flex
         width: 100%
+        min-width: 200px
         height: 100%
         align-items: center
         justify-content: center
