update select page and profiles fetching api

--- a/styles/select.module.sass
+++ b/styles/select.module.sass
@@ -9,6 +9,19 @@
     padding: 2rem 0
     img
         width: 100%
+    h1, h2, p
+        font-size: clamp(1.2rem, 2vw, 1.2rem)
+        text-align: center
+        margin-bottom: 1rem
+    p
+        font-size: clamp(1.1rem, 2vw, 1.2rem)
+        color: $primary
+        font-weight: 550
+    h2
+        padding: 1rem 0
+        font-size: clamp(1rem, 2vw, 1rem)
+    a
+        font-size: 1rem
     section
         box-shadow: 5px 4px 25px 20px rgba(0, 0, 0, 0.07)
         background: white
@@ -17,18 +30,6 @@
         max-width: 500px
         width: 90%
         padding: 1rem
-        h1, p
-            font-size: clamp(1.2rem, 2vw, 1.2rem)
-            text-align: center
-            margin-bottom: 1rem
-        p
-            font-size: clamp(1.1rem, 2vw, 1.2rem)
-            color: $primary
-            font-weight: 550
-        h2
-            padding: 1rem 0
-            font-size: clamp(1rem, 2vw, 1rem)
-
         .dp
             height: 70px
             border-radius: 50%
