--- a/components/modal/modal.module.sass
+++ b/components/modal/modal.module.sass
@@ -4,9 +4,9 @@
     position: fixed
     top: 0
     left: 0
-    height: 100%
-    width: 100%
-    z-index: 15
+    height: 100vh
+    width: 100vw
+    z-index: 10
     display: flex
     justify-content: center
     align-items: center
@@ -17,12 +17,14 @@
         width: 100%
         height: 100%
         background: rgba(0, 0, 0, .7)
+        z-index: 20
     .container
         position: relative
         background: white
         min-height: 100px
         width: 500px
         max-width: 95%
+        z-index: 21
         button.close
             position: absolute
             right: 1rem
