--- a/components/header/header.module.sass
+++ b/components/header/header.module.sass
@@ -17,6 +17,7 @@ header.dashboard__header
         display: flex
         justify-content: flex-end
         align-items: center
+        width: 100%
         .logo__container
             display: none
         .right__nav
@@ -81,6 +82,7 @@ header.dashboard__header
             transform: translateX(100%)
             opacity: 0
             min-width: 250px
+            max-width: 100%
             padding: 1rem 0
             background: #FFFFFF
             box-shadow: 2px 4px 15px 15px rgba(0, 0, 0, 0.05)
