--- a/styles/select.module.sass
+++ b/styles/select.module.sass
@@ -56,3 +56,9 @@
                 margin-right: 1rem
             .name
                 margin-right: 1rem
+            .details
+                button
+                    cursor: pointer
+                    color: $primary
+                    &:hover
+                        text-decoration: underline
