remove unused codes

--- a/components/aside/aside.module.sass
+++ b/components/aside/aside.module.sass
@@ -23,7 +23,7 @@
         box-shadow: 3px 4px 15px 3px rgba(0, 0, 0, 0.15)
     .logo__container
         height: 60px
-        width: 130px
+        // width: 130px
         position: relative
         padding: 15px 20px
         display: flex
@@ -31,8 +31,11 @@
         transition: .35s
         .logo
             height: 30px
-            width: 130px
+            // width: 130px
             position: relative
+            img
+                height: 20px
+                width: auto
     nav
 
         ul
