add verify/unverify company

--- a/components/company/company.module.sass
+++ b/components/company/company.module.sass
@@ -19,8 +19,9 @@
             width: 80px
             img
                 width: 80px
-                height: 80px
-                object-fit: cover
+                height: auto
+                min-height: 50px
+                object-fit: contain
         .name
             width: calc( 100% - calc( 3rem + 80px ) )
             white-space: nowrap
