--- a/styles/select.module.sass
+++ b/styles/select.module.sass
@@ -32,7 +32,7 @@
         padding: 1rem
         .dp
             height: 70px
-            border-radius: 50%
+            // border-radius: 50%
             text-align: center
             margin-bottom: 1rem
             img
