--- a/styles/select.module.sass
+++ b/styles/select.module.sass
@@ -22,6 +22,10 @@
         font-size: clamp(1rem, 2vw, 1rem)
     a
         font-size: 1rem
+
+    .alert
+        font-size: 1rem
+        font-weight: 400
     section
         box-shadow: 5px 4px 25px 20px rgba(0, 0, 0, 0.07)
         background: white
@@ -32,7 +36,6 @@
         padding: 1rem
         .dp
             height: 70px
-            // border-radius: 50%
             text-align: center
             margin-bottom: 1rem
             img
@@ -52,8 +55,14 @@
                 display: flex
                 align-items: center
             .logo
-                width: 40px
+                width: 50px
+                height: 50px
                 margin-right: 1rem
+                img
+                    object-fit: contain
+                    object-position: center
+                    height: 100%
+                    width: 100%
             .name
                 margin-right: 1rem
             .details
