update user and company cards UI

--- a/components/user/user.module.sass
+++ b/components/user/user.module.sass
@@ -2,7 +2,7 @@
 
 .card
     margin: 1rem 0
-    padding: .7rem 1rem
+    padding: .4rem 1rem
     border: none
     display: flex
     justify-content: space-between
@@ -10,11 +10,15 @@
     flex-wrap: wrap
     align-content: flex-end
     .dp
-        width: 80px
-        height: 80px
+        width: 40px
+        height: 40px
         border-radius: 50%
         overflow: hidden
         margin-right: 1rem
+        img
+            height: 100%
+            width: 100%
+            object-fit: cover
     .name
         margin: .8rem 0
         margin-right: 1rem
