--- a/components/loaders/card.module.sass
+++ b/components/loaders/card.module.sass
@@ -1,13 +1,13 @@
 .card
     margin: 0 0 1rem
-    padding: 1.8rem 1rem
+    padding: .5rem 1rem
     flex-wrap: wrap
     display: flex
     align-items: center
     min-height: 100px
     .logo
-        width: 90px
-        height: 90px
+        width: 50px
+        height: 50px
         background: rgba(226, 232, 236, .7)
         overflow: hidden
     .details
