--- a/components/loaders/users.module.sass
+++ b/components/loaders/users.module.sass
@@ -2,11 +2,11 @@
     display: flex
     align-items: center
     background: white
-    padding: 1rem
+    padding: .5rem 1rem
     margin-bottom: 1rem
     .dp
-        height: 80px
-        width: 80px
+        height: 40px
+        width: 40px
         border-radius: 50%
         background: rgba(226, 232, 236, .7)
         overflow: hidden
